--- a/Juan_Horse/src/Juan_Horse_frontend/index.html
+++ b/Juan_Horse/src/Juan_Horse_frontend/index.html
@@ -9,7 +9,10 @@
   <link rel="icon" href="/favicon.ico" />
 </head>
 
-<body>
+<body style="background-color: darkorchid;">
+  <div align:center>
+    <img src="public/logo2.svg" alt="$JUAN-The Horse">
+  </div>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
