--- a/Juan_Horse/src/Juan_Horse_frontend/index.html
+++ b/Juan_Horse/src/Juan_Horse_frontend/index.html
@@ -11,7 +11,7 @@
 
 <body style="background-color: darkorchid;">
   <div align:center>
-    <img src="public/logo2.svg" alt="$JUAN-The Horse">
+    <img src="public/android-chrome-512x512.png" alt="$JUAN-The Horse">
   </div>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
