--- a/Juan_Horse/src/Juan_Horse_frontend/index.html
+++ b/Juan_Horse/src/Juan_Horse_frontend/index.html
@@ -12,6 +12,7 @@
 <body style="background-color: darkorchid;">
   <div align:center>
     <img src="public/android-chrome-512x512.png" alt="$JUAN-The Horse">
+    <h3>$JUAN-The Horse</h3>
   </div>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
