--- a/Juan_Horse/src/Juan_Horse_frontend/index.html
+++ b/Juan_Horse/src/Juan_Horse_frontend/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="/favicon.ico" />
 </head>
 
-<body style="background-image: /home/kamal/Memethon/Juan_cover.jpeg;">
+<body style="background-image: url('https://github.com/HitmanBoi/Memethon/blob/main/Juan_cover.jpeg')">
   <div align:center>
     <img src="public/android-chrome-512x512.png" alt="$JUAN-The Horse">
     <h3>$JUAN-The Horse</h3>
