--- a/Juan_Horse/src/Juan_Horse_frontend/index.html
+++ b/Juan_Horse/src/Juan_Horse_frontend/index.html
@@ -9,10 +9,10 @@
   <link rel="icon" href="/favicon.ico" />
 </head>
 
-<body style="background-image: url('https://github.com/HitmanBoi/Memethon/blob/main/Juan_cover.jpeg')">
+<body style="background-color: rgb(5, 51, 5);">
   <div align:center>
     <img src="public/android-chrome-512x512.png" alt="$JUAN-The Horse">
-    <h3>$JUAN-The Horse</h3>
+    <h3 style="text-align: center; color: darkred;">$JUAN-The Horse</h3>
   </div>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
