--- a/Juan_Horse/src/Juan_Horse_frontend/index.html
+++ b/Juan_Horse/src/Juan_Horse_frontend/index.html
@@ -13,7 +13,7 @@
   <div align:center >
     <img src="public/android-chrome-512x512.png" alt="$JUAN-The Horse">
     <img src="https://www.pngmart.com/files/21/Lawn-Grass-Download-PNG-Image.png" alt="grass" width="100%">
-    <h3 style="text-align: center; color: darkred;">$JUAN-The Horse</h3>
+    <h3 style="text-align: center; color: brown;">$JUAN-The Horse</h3>
   </div>
   
   <div id="root"></div>
