--- a/Juan_Horse/src/Juan_Horse_frontend/index.html
+++ b/Juan_Horse/src/Juan_Horse_frontend/index.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width" />
-  <title>IC Hello Starter</title>
-  <base href="/" />
-  <link rel="icon" href="/favicon.ico" />
+	<title>Juan -The Horse ($JUAN) - Horse and Grass Themed Crypto Coin</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="src/index.scss"> <!-- add your CSS file here -->
 </head>
-
-<body style="background-color: rgb(40, 174, 236);">
-  <div align:center >
-    <img src="public/android-chrome-512x512.png" alt="$JUAN-The Horse">
-    <img src="https://www.pngmart.com/files/21/Lawn-Grass-Download-PNG-Image.png" alt="grass" width="100%">
-    <h3 style="text-align: center; color: brown;">$JUAN-The Horse</h3>
-  </div>
-  
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script> 
-  
+<body>
+	<header>
+		<h1>Juan -The Horse ($JUAN)</h1>
+		<p>Horse and Grass Themed Crypto Coin</p>
+	</header>
+	<main>
+		<section>
+			<h2>About $JUAN</h2>
+			<p>JUAN JUAN </p>
+			<img src="public/android-chrome-512x512.png" alt="$JUAN Logo">
+		</section>
+		<section>
+			<h2>Market Information</h2>
+			<p>NaN</p>
+			<p>NaN</p>
+		</section>
+		<section>
+			<h2>Community</h2>
+			<p>Join our community of horse and grass enthusiasts to stay up-to-date on the latest news and developments.</p>
+			<a href="https://kamalkant-github-io.vercel.app">Learn More</a>
+		</section>
+	</main>
+	<footer>
+		<p>&copy; 2024 JUAN Token. All rights reserved.</p>
+	</footer>
 </body>
-
 </html>
