--- a/Juan_Horse/src/Juan_Horse_frontend/index.html
+++ b/Juan_Horse/src/Juan_Horse_frontend/index.html
@@ -1,35 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Juan -The Horse ($JUAN) - Horse and Grass Themed Crypto Coin</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="src/index.scss"> <!-- add your CSS file here -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Horse Crypto Token</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<header>
-		<h1>Juan -The Horse ($JUAN)</h1>
-		<p>Horse and Grass Themed Crypto Coin</p>
-	</header>
-	<main>
-		<section>
-			<h2>About $JUAN</h2>
-			<p>JUAN JUAN </p>
-			<img src="public/android-chrome-512x512.png" alt="$JUAN Logo">
-		</section>
-		<section>
-			<h2>Market Information</h2>
-			<p>NaN</p>
-			<p>NaN</p>
-		</section>
-		<section>
-			<h2>Community</h2>
-			<p>Join our community of horse and grass enthusiasts to stay up-to-date on the latest news and developments.</p>
-			<a href="https://kamalkant-github-io.vercel.app">Learn More</a>
-		</section>
-	</main>
-	<footer>
-		<p>&copy; 2024 JUAN Token. All rights reserved.</p>
-	</footer>
+    <!-- Header Section -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Token</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="container">
+            <h1>Horse Crypto Token</h1>
+            <p>Revolutionizing the equestrian industry with blockchain technology</p>
+            <button>Learn More</button>
+        </div>
+    </section>
+
+    <!-- Features Section -->
+    <section class="features">
+        <div class="container">
+            <h2>Features</h2>
+            <ul>
+                <li>
+                    <i class="fas fa-horse"></i>
+                    <h3>Decentralized Horse Ownership</h3>
+                    <p>Own a piece of a horse with our tokenized ownership model</p>
+                </li>
+                <li>
+                    <i class="fas fa-chart-line"></i>
+                    <h3>Transparent Market Data</h3>
+                    <p>Get real-time market data and insights on horse performance</p>
+                </li>
+                <li>
+                    <i class="fas fa-lock"></i>
+                    <h3>Secure Transactions</h3>
+                    <p>Secure and transparent transactions with blockchain technology</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 Horse Crypto Token</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
