--- a/Juan_Horse/src/Juan_Horse_frontend/index.html
+++ b/Juan_Horse/src/Juan_Horse_frontend/index.html
@@ -1,62 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Horse Crypto Token</title>
-    <link rel="stylesheet" href="src/index.scss">
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <!-- Header Section -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Token</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="container">
-            <h1>Horse Crypto Token</h1>
-            <p>Revolutionizing the equestrian industry with blockchain technology</p>
-            <button>Learn More</button>
-        </div>
-    </section>
-
-    <!-- Features Section -->
-    <section class="features">
-        <div class="container">
-            <h2>Features</h2>
-            <ul>
-                <li>
-                    <i class="fas fa-horse"></i>
-                    <h3>Decentralized Horse Ownership</h3>
-                    <p>Own a piece of a horse with our tokenized ownership model</p>
-                </li>
-                <li>
-                    <i class="fas fa-chart-line"></i>
-                    <h3>Transparent Market Data</h3>
-                    <p>Get real-time market data and insights on horse performance</p>
-                </li>
-                <li>
-                    <i class="fas fa-lock"></i>
-                    <h3>Secure Transactions</h3>
-                    <p>Secure and transparent transactions with blockchain technology</p>
-                </li>
-            </ul>
-        </div>
-    </section>
-
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2024 Horse Crypto Token</p>
-    </footer>
-
-    <script src="script.js"></script>
+    <div id="root"></div>
+    <script type="module" src="src/main.jsx"></script>
 </body>
 </html>
